--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="icon" href="assets/svg/logoIcon.svg">
 </head>
 <body>
-    <header>
-    </header>
-    <main>
-    </main>
+    <header></header>
+    <main></main>
     <footer></footer>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
