Criando o cursor customizado
Organização do código nos arquivos scss

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaique Oliveira - Front-End Developer</title>
     <link rel="icon" href="assets/svg/logoIcon.svg">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <div class="cursor2"></div>
     <header></header>
     <main></main>
     <footer></footer>
