Seção portfólio finalizada na resolução 1920x

--- a/index.html
+++ b/index.html
@@ -67,6 +67,39 @@
                 </div>
             </article>
         </section>
+        <section class="portfolio">
+            <article class="conteudoPortfolio">
+                <div class="cards">
+                    <div class="card">
+                        <img src="assets/img/cardPortfolio01.png" alt="">
+                        <div class="info">
+                            <h2>EM BREVE</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="button">Veja mais sobre</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="assets/img/cardPortfolio02.png" alt="">
+                        <div class="info">
+                            <h2>EM BREVE</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="button">Veja mais sobre</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="assets/img/cardPortfolio03.png" alt="">
+                        <div class="info">
+                            <h2>EM BREVE</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <a href="#" class="button">Veja mais sobre</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolioButton">
+                    <button class="button"><a href="#">Ver todos os projetos</a></button>
+                </div>
+            </article>
+        </section>
     </main>
     <footer></footer>
     <div class="cursor"></div>
