--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kaique Oliveira - Front-End Developer</title>
     <link rel="icon" href="assets/svg/logoIcon.svg">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.1"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -69,29 +70,55 @@
         </section>
         <section class="portfolio">
             <article class="conteudoPortfolio">
-                <div class="cards">
-                    <div class="card">
-                        <img src="assets/img/cardPortfolio01.png" alt="">
-                        <div class="info">
-                            <h2>EM BREVE</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="button">Veja mais sobre</a>
+                <div class="cardsSlider">
+                    <div class="cards swiper-wrapper">
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cardPortfolio01.png" alt="">
+                            <div class="info">
+                                <h2>EM BREVE</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="#" class="button">Veja mais sobre</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/img/cardPortfolio02.png" alt="">
-                        <div class="info">
-                            <h2>EM BREVE</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="button">Veja mais sobre</a>
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cardPortfolio02.png" alt="">
+                            <div class="info">
+                                <h2>EM BREVE</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="#" class="button">Veja mais sobre</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/img/cardPortfolio03.png" alt="">
-                        <div class="info">
-                            <h2>EM BREVE</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="button">Veja mais sobre</a>
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cardPortfolio03.png" alt="">
+                            <div class="info">
+                                <h2>EM BREVE</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="#" class="button">Veja mais sobre</a>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cardPortfolio01.png" alt="">
+                            <div class="info">
+                                <h2>EM BREVE</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="#" class="button">Veja mais sobre</a>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cardPortfolio02.png" alt="">
+                            <div class="info">
+                                <h2>EM BREVE</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="#" class="button">Veja mais sobre</a>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="assets/img/cardPortfolio03.png" alt="">
+                            <div class="info">
+                                <h2>EM BREVE</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="#" class="button">Veja mais sobre</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -144,6 +171,7 @@
     <footer></footer>
     <div class="cursor"></div>
     <div class="cursor2"></div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
