90% da seção sobre

--- a/index.html
+++ b/index.html
@@ -167,6 +167,71 @@
                 </div>
             </div>
         </section>
+        <section class="sobre">
+            <div class="innerWidth">
+                <div class="titulo">
+                    <span class="barTitle"></span>
+                    <h2>SOBRE</h2>
+                </div>
+                <div class="info">
+                    <h3>kaique oliveira</h3>
+                    <p>Nasci e cresci em São Paulo atualmente tenho 18 anos e eu sempre gostei muito de tecnologia (principalmente de games), entrei no mundo da programação recentemente. Desde o final de 2021 tenho me dedicado a aprender programação, o que me incentivou a entrar nessa área foi o curso no Senac onde tive minha primeira experiência desenvolvendo sites e apps mobile.</p>
+                </div>
+                <div class="infoCv">
+                    <div class="timeline">
+                        <div class="titulo">
+                            <span class="barTitle"></span>
+                            <h2>educação</h2>
+                        </div>
+                        <div class="timelineItens">
+                            <div class="timelineItem">
+                                <div class="timelineDot"></div>
+                                <div class="timelineDate"><p>2021 - 2022</p></div>
+                                <div class="timelineContent">
+                                    <h3>Senac São Miguel Paulista</h3>
+                                    <p>Tecnico em informatica</p>
+                                </div>
+                            </div>
+                            <div class="timelineItem">
+                                <div class="timelineDot"></div>
+                                <div class="timelineDate"><p>2021 - 2021</p></div>
+                                <div class="timelineContent">
+                                    <h3>cisco networking academy</h3>
+                                    <p>IT Essentials</p>
+                                </div>
+                            </div>
+                            <div class="timelineItem">
+                                <div class="timelineDot"></div>
+                                <div class="timelineDate"><p>2022 - 2022</p></div>
+                                <div class="timelineContent">
+                                    <h3>OneBitCode</h3>
+                                    <p>Fullstack: JavaScript</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skills">
+                        <div class="titulo">
+                            <span class="barTitle"></span>
+                            <h2>habilidades</h2>
+                        </div>
+                        <div class="skillsList">
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>Sass</li>
+                                <li>Git</li>
+                                <li>JavaScript</li>
+                                <li>Angular</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="buttonSobre">
+                    <a href="#" class="button">Download CV</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
     <div class="cursor"></div>
