--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
                         </div>
                         <div class="skillsList">
                             <ul>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>Sass</li>
-                                <li>Git</li>
-                                <li>JavaScript</li>
-                                <li>Angular</li>
+                                <li><p>HTML</p></li>
+                                <li><p>CSS</p></li>
+                                <li><p>Sass</p></li>
+                                <li><p>Git</p></li>
+                                <li><p>JavaScript</p></li>
+                                <li><p>Angular</p></li>
                             </ul>
                         </div>
                     </div>
