Seção contato finalizada na resolução 1920x

--- a/index.html
+++ b/index.html
@@ -232,6 +232,32 @@
                 </div>
             </div>
         </section>
+        <section class="contato">
+            <article class="innerWidth">
+                <div class="conteudoContato">
+                    <div class="infoContato">
+                        <div class="titulo">
+                            <span class="barTitle"></span>
+                            <h2>SOBRE</h2>
+                        </div>
+                        <div class="conteudoInfo">
+                            <p>Gostou do meu portfolio? entre em contato caso tenha alguma duvida ficaria feliz em responder</p>
+                            <p>Caso queira me dar alguma dica ou sugestão também pode entrar em contato  :)</p>
+                            <p id="contatoInfo">Telefone: +55 (11) 96967-0335</p>
+                            <p id="contatoInfo">E-mail: kaiqueoliveira257@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="formContato">
+                        <form action="" method="post">
+                            <input type="text" name="name" placeholder="Nome:" id="fname" autocomplete="off">
+                            <input type="email" name ="email" placeholder="E-mail:" id="email" autocomplete="off">
+                            <textarea name="message" id="mensagem" cols="30" rows="10" placeholder="Mensagem:" autocomplete="off"></textarea>
+                            <button class="button" type="submit">ENVIAR</button>
+                        </form>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
     <footer></footer>
     <div class="cursor"></div>
