Revisão das informações e do código

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Início navbar -->
     <header>
         <article class="innerWidth">
             <nav class="navBar">
@@ -42,7 +43,9 @@
             </nav>
         </article>
     </header>
+    <!-- Fim navbar -->
     <main>
+        <!-- Início home -->
         <section class="home" id="home">
             <article class="innerWidth">
                 <div class="banner">
@@ -77,6 +80,7 @@
                 </div>
             </article>
         </section>
+        <!-- Fim home -->
         <section class="portfolio" id="portfolio">
             <article class="conteudoPortfolio">
                 <div class="cardsSlider">
@@ -84,48 +88,21 @@
                         <div class="card swiper-slide">
                             <img src="assets/img/cardPortfolio01.png" alt="">
                             <div class="info">
-                                <h2>EM BREVE</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <h2>Web Sites</h2>
                                 <a href="#" class="button">Veja mais sobre</a>
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <img src="assets/img/cardPortfolio02.png" alt="">
                             <div class="info">
-                                <h2>EM BREVE</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <h2>App's Mobile</h2>
                                 <a href="#" class="button">Veja mais sobre</a>
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <img src="assets/img/cardPortfolio03.png" alt="">
                             <div class="info">
-                                <h2>EM BREVE</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                <a href="#" class="button">Veja mais sobre</a>
-                            </div>
-                        </div>
-                        <div class="card swiper-slide">
-                            <img src="assets/img/cardPortfolio01.png" alt="">
-                            <div class="info">
-                                <h2>EM BREVE</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                <a href="#" class="button">Veja mais sobre</a>
-                            </div>
-                        </div>
-                        <div class="card swiper-slide">
-                            <img src="assets/img/cardPortfolio02.png" alt="">
-                            <div class="info">
-                                <h2>EM BREVE</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                <a href="#" class="button">Veja mais sobre</a>
-                            </div>
-                        </div>
-                        <div class="card swiper-slide">
-                            <img src="assets/img/cardPortfolio03.png" alt="">
-                            <div class="info">
-                                <h2>EM BREVE</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <h2>Sistemas</h2>
                                 <a href="#" class="button">Veja mais sobre</a>
                             </div>
                         </div>
@@ -177,7 +154,7 @@
             </article>
         </section>
         <hr data-aos="fade-up" data-aos-duration="900">
-        <section class="sobre">
+        <section class="sobre" id="sobre">
             <article class="innerWidth">
                 <div class="titulo" data-aos="fade-up" data-aos-duration="300">
                     <span class="barTitle"></span>
@@ -194,6 +171,22 @@
                             <h2>educação</h2>
                         </div>
                         <div class="timelineItens" data-aos="fade-up" data-aos-duration="750">
+                            <div class="timelineItem" data-aos="fade-up" data-aos-duration="800">
+                                <div class="timelineDot" data-aos="fade-up" data-aos-duration="650"></div>
+                                <div class="timelineDate" data-aos="fade-up" data-aos-duration="650"><p>2023 - 2025</p></div>
+                                <div class="timelineContent" data-aos="fade-up" data-aos-duration="650">
+                                    <h3>Impacta</h3>
+                                    <p>Análise e Desenvolvimento de Sistemas</p>
+                                </div>
+                            </div>
+                            <div class="timelineItem" data-aos="fade-up" data-aos-duration="800">
+                                <div class="timelineDot" data-aos="fade-up" data-aos-duration="650"></div>
+                                <div class="timelineDate" data-aos="fade-up" data-aos-duration="650"><p>2022 - 2023</p></div>
+                                <div class="timelineContent" data-aos="fade-up" data-aos-duration="650">
+                                    <h3>OneBitCode</h3>
+                                    <p>Fullstack: JavaScript</p>
+                                </div>
+                            </div>
                             <div class="timelineItem" data-aos="fade-up" data-aos-duration="700">
                                 <div class="timelineDot" data-aos="fade-up" data-aos-duration="650"></div>
                                 <div class="timelineDate" data-aos="fade-up" data-aos-duration="650"><p>2021 - 2022</p></div>
@@ -208,14 +201,6 @@
                                 <div class="timelineContent" data-aos="fade-up" data-aos-duration="650">
                                     <h3>cisco networking academy</h3>
                                     <p>IT Essentials</p>
-                                </div>
-                            </div>
-                            <div class="timelineItem" data-aos="fade-up" data-aos-duration="800">
-                                <div class="timelineDot" data-aos="fade-up" data-aos-duration="650"></div>
-                                <div class="timelineDate" data-aos="fade-up" data-aos-duration="650"><p>2022 - 2022</p></div>
-                                <div class="timelineContent" data-aos="fade-up" data-aos-duration="650">
-                                    <h3>OneBitCode</h3>
-                                    <p>Fullstack: JavaScript</p>
                                 </div>
                             </div>
                         </div>
@@ -238,7 +223,7 @@
                     </div>
                 </div>
                 <div class="buttonSobre" data-aos="fade-up" data-aos-duration="600">
-                    <a href="#" class="button">Download CV</a>
+                    <a target="_blank" href="./assets/pdf/KaiqueOliveira.pdf" class="button">Download CV</a>
                 </div>
             </article>
         </section>
@@ -255,7 +240,7 @@
                             <p data-aos="fade-up" data-aos-duration="600">Gostou do meu portfolio? entre em contato caso tenha alguma duvida ficaria feliz em responder</p>
                             <p data-aos="fade-up" data-aos-duration="600">Caso queira me dar alguma dica ou sugestão também pode entrar em contato  :)</p>
                             <p data-aos="fade-up" data-aos-duration="600" id="contatoInfo">Telefone: +55 (11) 96967-0335</p>
-                            <p data-aos="fade-up" data-aos-duration="600" id="contatoInfo">E-mail: kaiqueoliveira257@gmail.com</p>
+                            <p data-aos="fade-up" data-aos-duration="600" id="contatoInfo">E-mail: contato@okaique.com</p>
                         </div>
                     </div>
                     <div class="formContato" data-aos="fade-up" data-aos-duration="650">
