Iniciando a pagina projetos

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="portfolioButton" data-aos="fade-up">
-                    <button class="button"><a href="#">Ver todos os projetos</a></button>
+                    <button class="button"><a href="projetos.html">Ver todos os projetos</a></button>
                 </div>
             </article>
         </section>
