Criação da estrutura da pagina projetos

--- a/projetos.html
+++ b/projetos.html
@@ -39,8 +39,67 @@
     </header>
     <!-- Fim navbar -->
     <main>
-        <!-- Início home -->
-        
+        <!-- Início Projetos -->
+        <section class="projetos">
+            <article class="innerWidth">
+                <div class="conteudoProjetos">
+                    <div class="titulo" data-aos="fade-up" data-aos-duration="300">
+                        <span class="barTitle"></span>
+                        <h2>PROJETOS</h2>
+                    </div>
+                    <div class="cardProjetos">
+                        <div class="card">
+                            <div class="cover">
+                                <img src="/assets/img/nubankPage.png" alt="">
+                                <div class="detalhes">
+                                    <p>Nubank</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="cover">
+                                <img src="/assets/img/nubankPage.png" alt="">
+                                <div class="detalhes">
+                                    <p>Nubank</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="cover">
+                                <img src="/assets/img/nubankPage.png" alt="">
+                                <div class="detalhes">
+                                    <p>Nubank</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="cover">
+                                <img src="/assets/img/nubankPage.png" alt="">
+                                <div class="detalhes">
+                                    <p>Nubank</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="cover">
+                                <img src="/assets/img/nubankPage.png" alt="">
+                                <div class="detalhes">
+                                    <p>Nubank</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="cover">
+                                <img src="/assets/img/nubankPage.png" alt="">
+                                <div class="detalhes">
+                                    <p>Nubank</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
         <hr data-aos="fade-up" data-aos-duration="900">
         <section class="contato" id="contato">
             <article class="innerWidth">
