Alterações - Conteudo do site em php - Pagina do projeto Nubank - Alterações no estilo

--- a/nubank.html
+++ b/nubank.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos - Kaique Oliveira</title>
     <link rel="icon" href="assets/svg/logoIcon.svg">
+
     <!-- Meu CSS/estilo -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -35,66 +36,21 @@
     </header>
     <!-- Fim navbar -->
     <main>
-        <!-- Início Projetos -->
-        <section class="projetos">
+        <!-- Início Projeto Nubank -->
+        <section class="projeto">
             <article class="innerWidth">
-                <div class="conteudoProjetos">
-                    <div class="titulo">
-                        <span class="barTitle"></span>
-                        <h2>PROJETOS</h2>
+                <div class="titulo">
+                    <span class="barTitle"></span>
+                    <h2>nubank website</h2>
+                </div>
+                <div class="conteudoProjeto">
+                    <div class="info">
+                        <p>Neste projeto, criei uma página web inspirada no design da Nubank. Com foco na simplicidade, utilizei apenas HTML e SCSS para o desenvolvimento, para melhorar as minhas habilidades nessas duas tecnologias.</p>
                     </div>
-                    <div class="cardProjetos">
-                        <div class="card">
-                            <a href="nubank.html">
-                                <div class="cover">
-                                    <img src="/assets/img/nubankPage.png" alt="">
-                                    <div class="detalhes">
-                                        <p>Nubank</p>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="buttonSobre">
+                        <a target="_blank" href="#" class="button">Ver o projeto!</a>
                     </div>
+                    <img src="./assets/img/nubankWeb.png" alt="">
                 </div>
             </article>
         </section>
