fix: page nubank button and style

--- a/nubank.html
+++ b/nubank.html
@@ -48,7 +48,7 @@
                         <p>Neste projeto, criei uma página web inspirada no design da Nubank. Com foco na simplicidade, utilizei apenas HTML e SCSS para o desenvolvimento, para melhorar as minhas habilidades nessas duas tecnologias.</p>
                     </div>
                     <div class="buttonSobre">
-                        <a target="_blank" href="#" class="button">Ver o projeto!</a>
+                        <button class="button" disabled>Ver o projeto!</button>
                     </div>
                     <img src="./assets/img/nubankWeb.png" alt="">
                 </div>
