feat: caoselheiro project page

--- a/projetos.html
+++ b/projetos.html
@@ -55,44 +55,14 @@
                             </a>
                         </div>
                         <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
+                            <a href="caoselheiro.html">
+                                <div class="cover">
+                                    <img src="/assets/img/caoselheiroPage.png" alt="">
+                                    <div class="detalhes">
+                                        <p>Cãoselheiro</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <div class="cover">
-                                <img src="/assets/img/nubankPage.png" alt="">
-                                <div class="detalhes">
-                                    <p>Nubank</p>
-                                </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
