--- a/nubank.html
+++ b/nubank.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos - Kaique Oliveira</title>
+    <title>Projeto Nubank Website</title>
     <link rel="icon" href="assets/svg/logoIcon.svg">
 
     <!-- Meu CSS/estilo -->
