style: project page and projects style

--- a/caoselheiro.html
+++ b/caoselheiro.html
@@ -36,7 +36,7 @@
     </header>
     <!-- Fim navbar -->
     <main>
-        <!-- Início Projeto Cãoselheiro -->
+        <!-- Início Projeto Nubank -->
         <section class="projeto">
             <article class="innerWidth">
                 <div class="titulo">
@@ -50,7 +50,54 @@
                     <div class="buttonSobre">
                         <button class="button"><a href="https://kiqv.github.io/caoselheiroKaique/" target="_blank">Ver o projeto!</a></button>
                     </div>
-                    <img src="./assets/img/caoselheiroWeb.png" alt="">
+                    <div class="projetoPreview">
+                        <div class="projetoHeader">
+                            <img src="assets/img/projetoCaoselheiro/homeCaoselheiro.png" alt="">
+                        </div>
+                        <div class="projetoSobre">
+                            <div class="conteudoSobre">
+                                <h3>SOBRE O PROJETO</h3>
+                                <hr style="background-color: #FBB900;">
+                                <p>Este projeto de website foi desenvolvido como parte de um processo seletivo na empresa Econverse. A tarefa envolvia a criação do layout com base nas diretrizes fornecidas pela empresa, bem como a implementação do código do website. Além disso, um aspecto fundamental do projeto era a criação de uma vitrine de produtos, para a qual um arquivo JSON foi disponibilizado.
+                                <br><br>
+                                Particularmente, apreciei bastante este projeto, pois me proporcionou uma valiosa oportunidade para aprimorar minhas habilidades nas tecnologias empregadas. Desde a concepção do layout de acordo com as especificações da empresa até a integração do arquivo JSON para criar uma vitrine de produtos atrativa</p>
+                            </div>
+                        </div>
+                        <div class="projetoTipo">
+                            <div class="conteudoTipo">
+                                <h3>TIPOGRAFIA</h3>
+                                <hr style="background-color: #FBB900;">
+                                <h2>Poppins</h2>
+                                <div class="tipografia">
+                                    <div class="regular">
+                                        <h3>REGULAR</h3>
+                                        <p class="mai">a b c d e f  g h i j k l m n o p q r s t u v w x y z</p>
+                                        <p class="min">a b c d e f  g h i j k l m n o p q r s t u v w x y z</p>
+                                    </div>
+                                    <div class="medium">
+                                        <h3>MEDIUM</h3>
+                                        <p class="mai">a b c d e f  g h i j k l m n o p q r s t u v w x y z</p>
+                                        <p class="min">a b c d e f  g h i j k l m n o p q r s t u v w x y z</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="projetoCores">
+                            <div class="conteudoCores">
+                                <h3>CORES</h3>
+                                <hr style="background-color: #FBB900;">
+                                <div class="cores">
+                                    <div class="cor1" style="background-color: #FBB900;"></div>
+                                    <div class="cor2" style="background-color: #F0D075;"></div>
+                                    <div class="cor3" style="background-color: #FEF6E7;"></div>
+                                    <div class="cor4" style="background-color: #4D4D4D;"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="projetoPage">
+                            <img src="assets/img/projetoCaoselheiro/caoselheiroPage.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </article>
         </section>
