--- a/nubank.html
+++ b/nubank.html
@@ -50,7 +50,54 @@
                     <div class="buttonSobre">
                         <button class="button" disabled>Ver o projeto!</button>
                     </div>
-                    <img src="./assets/img/nubankWeb.png" alt="">
+                    <div class="projetoPreview">
+                        <div class="projetoHeader">
+                            <img src="assets/img/projetoNubank/homeNubank.png" alt="">
+                        </div>
+                        <div class="projetoSobre">
+                            <div class="conteudoSobre">
+                                <h3>SOBRE O PROJETO</h3>
+                                <hr>
+                                <p>A Nubank é uma das empresas mais inovadoras do mercado financeiro atual. A empresa tem como objetivo tornar a experiência bancária mais simples e acessível para todos, oferecendo produtos e serviços financeiros 100% digitais e sem burocracia.
+                                    <br><br>
+                                    Recentemente, escolhi a Nubank poara um projeto de estudo realizando o  redesign da home da Nubank, onde pude aplicar todo o meu conhecimento em design e desenvolvimento para criar uma interface simples, moderna e intuitiva para os usuários.</p>
+                            </div>
+                        </div>
+                        <div class="projetoTipo">
+                            <div class="conteudoTipo">
+                                <h3>TIPOGRAFIA</h3>
+                                <hr>
+                                <h2>Poppins</h2>
+                                <div class="tipografia">
+                                    <div class="regular">
+                                        <h3>REGULAR</h3>
+                                        <p class="mai">a b c d e f  g h i j k l m n o p q r s t u v w x y z</p>
+                                        <p class="min">a b c d e f  g h i j k l m n o p q r s t u v w x y z</p>
+                                    </div>
+                                    <div class="medium">
+                                        <h3>MEDIUM</h3>
+                                        <p class="mai">a b c d e f  g h i j k l m n o p q r s t u v w x y z</p>
+                                        <p class="min">a b c d e f  g h i j k l m n o p q r s t u v w x y z</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="projetoCores">
+                            <div class="conteudoCores">
+                                <h3>CORES</h3>
+                                <hr>
+                                <div class="cores">
+                                    <div class="cor1"></div>
+                                    <div class="cor2"></div>
+                                    <div class="cor3"></div>
+                                    <div class="cor4"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="projetoPage">
+                            <img src="assets/img/projetoNubank/nubankPage.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </article>
         </section>
