--- a/projetos.html
+++ b/projetos.html
@@ -47,7 +47,7 @@
                         <div class="card">
                             <a href="nubank.html">
                                 <div class="cover">
-                                    <img src="/assets/img/nubankPage.png" alt="">
+                                    <img src="/assets/img/projetoNubank/nubankPage.png" alt="">
                                     <div class="detalhes">
                                         <p>Nubank</p>
                                     </div>
@@ -57,9 +57,19 @@
                         <div class="card">
                             <a href="caoselheiro.html">
                                 <div class="cover">
-                                    <img src="/assets/img/caoselheiroPage.png" alt="">
+                                    <img src="/assets/img/projetoCaoselheiro/caoselheiroPage.png" alt="">
                                     <div class="detalhes">
                                         <p>Cãoselheiro</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card">
+                            <a href="mandaTrends.html">
+                                <div class="cover">
+                                    <img src="/assets/img/projetoMandaTrends/mandaTrends.png" alt="">
+                                    <div class="detalhes">
+                                        <p>MandaTrends</p>
                                     </div>
                                 </div>
                             </a>
